# able_testing_framework

./: .flake8  .gitignore  Dockerfile  README.md  config.py  conftest.py  connection_config.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  text.py
api/: api.py  base_api.py
components/: elements.py
config/: config.json
constants/: application.py
core/: allure_helper.py  allure_wrapper.py  db.py  helpers.py  teamcity_environment.py
core/db/: db.py
elements/: elements.py
fixtures/: ui.py
models/: base_methods.py  language.py  notification.py
pages/: edit_page.py  google_page.py
tests/: test_application.py  test_google_page.py
utils/: user_helpers.py
